Wed Feb 12 11:19:42 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (struct send_data): Fix indentation.

Wed Feb 12 08:48:04 1997  Greg A. Woods  <woods@most.weird.com>

	* mkmodules.c (loginfo_contents): add missing comma in
	initializer statement (caused syntax error on SunOS-4).

Tue Feb 11 21:14:28 1997  Ian Lance Taylor  <ian@cygnus.com>

	* commit.c (find_fileproc): If force_ci is set, set the status to
	T_MODIFIED even if the file hasn't changed.
	(commit): Pass force_ci to send_files as new force argument.
	* client.c (struct send_data): Define.
	(send_fileproc): The callerdat parameter now points to a send_data
	struct.  If force is set, always call send_modified.
	(send_dirent_proc): The callerdat parameter now points to a
	send_data struct.
	(send_files): Add force parameter. Change all callers.  Set up a
	send_data struct and pass it to start_recursion as callerdat.
	* client.h (send_files): Update declaration.
	* sanity.sh (basica): Add a simple test for the above patch.

Sun Feb  9 12:58:59 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* tag.c (cvstag), rtag.c (rtag): Pass -f to server if specified in
	the client.  I haven't tried to come up with a test case because
	the fix seems obvious.

	* import.c (add_rcs_file): Change size of altdate1 and altdate2 to
	MAXDATELEN.
	* cvs.h (MAXDATELEN): Fix comments; describe what this is for.

	* diff.c (diff_usage): Document --ifdef and try to briefly say
	what "rcsdiff-options" means.

	* update.c (update): If update had a nonzero status and we haven't
	yet tried to fetch unpatchable files, go ahead and try it again.
	The previous behavior was to quit, which meant that updates would
	keep failing until you hacked around the problem.  Patch and bug
	report by Ian; comment, ChangeLog entry, and willingness to take
	the flak if checking it is premature by Jim.

	* server.c (alloc_pending): New function.
	* server.c: Call it.  Fixes places where we had neglected to